edit python labs

--- a/Python/lab2/lab_2_1.1.ipynb
+++ b/Python/lab2/lab_2_1.1.ipynb
@@ -13,12 +13,12 @@
    "id": "6c276c1d-b0b7-4d7d-a25b-b8685068555b",
    "metadata": {},
    "source": [
-    "## Imports and warnings ignores"
+    "### Imports and warnings ignores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "b57fdf07-2890-4490-86fa-9f434d349bda",
    "metadata": {},
    "outputs": [],
@@ -37,17 +37,17 @@
    "id": "e56a87be",
    "metadata": {},
    "source": [
-    "## File checking"
+    "### File checking"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "edc481a1-6b96-4357-a5cc-8c3f5a5d3719",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '/Users/valerikanasha228/Downloads/archive/Cleaned_ships_data.csv'\n",
+    "path = 'data/Cleaned_ships_data.csv'\n",
     "def check_file_path(path):\n",
     "    res = True\n",
     "    if not path.endswith('.csv'):\n",
@@ -77,12 +77,12 @@
    "id": "f04a4f4d-39ff-49b9-83b4-0353a51c29de",
    "metadata": {},
    "source": [
-    "## Reading a data"
+    "### Reading a data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "fee1e580",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "21a26a87-f80e-4b06-ab25-9ce3c00e92c7",
    "metadata": {
     "scrolled": false
@@ -138,8 +138,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d1298ca0",
+   "metadata": {},
+   "source": [
+    "### Depence by ship types"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "b916b3f5",
    "metadata": {},
    "outputs": [
@@ -180,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "45283278-8291-45d2-8412-a778826ada81",
    "metadata": {},
    "outputs": [
@@ -221,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "e44d65a3-8651-4633-a1d3-4c13750a1faf",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
@@ -263,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "193a4a8d-03d1-4bee-81b6-f6ecb5d7113d",
    "metadata": {
     "scrolled": true
@@ -293,14 +301,6 @@
     "    plt.grid(True)\n",
     "    plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e04dda82",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
