--- a/Python/lab2/lab_2_1.2.ipynb
+++ b/Python/lab2/lab_2_1.2.ipynb
@@ -15,7 +15,7 @@
    "id": "62ff4862-44dd-4dc0-b620-bdbe02a68134",
    "metadata": {},
    "source": [
-    "## Imports and warnings ignoring"
+    "### Imports and warnings ignoring"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "id": "87af3d2f",
    "metadata": {},
    "source": [
-    "## File checking"
+    "### File checking"
    ]
   },
   {
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '/Users/valerikanasha228/Downloads/IRIS.csv'\n",
+    "path = 'data/IRIS.csv'\n",
     "def check_file_path(path):\n",
     "    res = True\n",
     "    if not path.endswith('.csv'):\n",
@@ -79,7 +79,7 @@
    "id": "11856a9c-4009-4518-9e8f-24e4d8a18490",
    "metadata": {},
    "source": [
-    "## Loading a dataset"
+    "### Loading a dataset"
    ]
   },
   {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "f315552a-6209-4b34-ba21-9a0aa221e574",
    "metadata": {},
    "outputs": [
