--- a/Python/lab3/lab3.ipynb
+++ b/Python/lab3/lab3.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '/Users/valerikanasha228/Downloads/s1.txt'\n",
+    "path = 'data/s1.txt'\n",
     "def check_file_path(path):\n",
     "    res = True\n",
     "    if not os.path.exists(path):\n",
