--- a/Python/lab4/lab4.ipynb
+++ b/Python/lab4/lab4.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '/Users/valerikanasha228/Downloads/gdp_csv.csv'\n",
+    "path = 'data/gdp_csv.csv'\n",
     "def check_file_path(path):\n",
     "    res = True\n",
     "    if not path.endswith('.csv'):\n",
@@ -203,22 +203,6 @@
     "        plt.show()\n",
     "        print(f'GDP prediction for {year} in {country_code}: {predicted_gdp[0]}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f78b6aa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "499a4936",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
