--- a/Python/lab2/lab2_2.ipynb
+++ b/Python/lab2/lab2_2.ipynb
@@ -13,7 +13,7 @@
    "id": "8c3bf6a7-a00b-4876-a35d-73d4a116965b",
    "metadata": {},
    "source": [
-    "## Imports and warning ignores"
+    "### Imports and warning ignores"
    ]
   },
   {
@@ -37,7 +37,7 @@
    "id": "a5d2fb2e",
    "metadata": {},
    "source": [
-    "## File checking"
+    "### File checking"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '/Users/valerikanasha228/Downloads/StudentsPerformance.csv'\n",
+    "path = 'data/StudentsPerformance.csv'\n",
     "def check_file_path(path):\n",
     "    res = True\n",
     "    if not path.endswith('.csv'):\n",
@@ -77,7 +77,7 @@
    "id": "f0fa23ab",
    "metadata": {},
    "source": [
-    "## Reading a data"
+    "### Reading a data"
    ]
   },
   {
@@ -235,14 +235,16 @@
    "id": "b087b354",
    "metadata": {},
    "source": [
-    "# 4. Average scres of parent's education level"
+    "# 4. Average score of parent's education level"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "id": "68174ffc",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -268,22 +270,6 @@
     "    plt.legend(loc='lower right')\n",
     "    plt.show()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6e468cc1",
-   "metadata": {},
-   "source": [
-    "### Вывод: у студентов, чьи родители имеют диплом магистра и бакалавра, средний балл по предметам выше"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb236b81",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
